--- a/ext-systems/city-register/pom.xml
+++ b/ext-systems/city-register/pom.xml
@@ -89,6 +89,7 @@
                 <version>3.3.1</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <outputDirectory>/Users/mac/dev/tools/apache-tomcat-9.0.37/webapps</outputDirectory>
                 </configuration>
             </plugin>
             <plugin>
